--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) ASKREP 2022.
+  -->
+
 <resources>
 
     <style name="Theme.BasicStateCodelab" parent="android:Theme.Material.Light.NoActionBar">
